<resources>
    <string name="app_name">MaintenanceApps</string>
    <string name="pref_file">com.maintenanceapps.preference_file</string>
    <string name="pref_login_status">com.maintenanceapps.preference_login_status</string>
    <string name="pref_id">com.maintenanceapps.preference_id</string>
    <string name="pref_nama">com.maintenanceapps.preference_nama</string>
    <string name="pref_role">com.maintenanceapps.preference_role</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="ketik_id_mesin">Ketik ID Mesin</string>
    <string name="riwayat_maintenance">Riwayat Maintenance</string>
    <string name="line_mesin_proses">#Line | #Mesin | #Proses</string>
    <string name="modul">#Modul</string>
    <string name="waktu_error">Waktu Error</string>
    <string name="waktu_error1">#Waktu Error</string>
    <string name="waktu_mulai_mnt">Waktu Mulai Mnt</string>
    <string name="waktu_mulai_mnt1">#Waktu Mulai Mnt</string>
    <string name="waktu_selesai_mnt">Waktu Selesai Mnt</string>
    <string name="waktu_selesai_mnt1">#Waktu Selesai Mnt</string>
    <string name="lama_penyelesaian">Lama Penyelesaian</string>
    <string name="waktu_selesai_mnt2">#Waktu Selesai Mnt</string>
    <string name="pic">PIC</string>
    <string name="nama_pic">#Nama PIC</string>
    <string name="sppm_wh">SPPM/WH</string>
    <string name="sppm_wh1">#SPPM/WH</string>
    <string name="bagian_mesin">Bagian Mesin</string>
    <string name="bagian_mesin1">#Bagian Mesin</string>
    <string name="sparepart">Sparepart</string>
    <string name="sparepart1">#Sparepart</string>
    <string name="masalah_mekanikal1">Masalah Mekanikal</string>
    <string name="permasalahan">Permasalahan :</string>
    <string name="masalah">#Masalah</string>
    <string name="penyebab">Penyebab :</string>
    <string name="penyebab1">#Penyebab</string>
    <string name="penyelesaian">Penyelesaian :</string>
    <string name="penyelesaian1">#Penyelesaian</string>
    <string name="masalah_teknikal">Masalah Teknikal</string>
    <string name="alarm">Alarm :</string>
    <string name="displayalarm_nama_alarm">#DisplayAlarm | Nama Alarm</string>
    <string name="definisi">Definisi :</string>
    <string name="definisi1">#Definisi</string>
    <string name="penyebab2">Penyebab :</string>
    <string name="penyebab4">#Penyebab</string>
    <string name="selamat_datang">Selamat datang,</string>
    <string name="mulai_maintenance">Mulai Maintenance</string>
    <string name="input_masalah">Input Masalah</string>
    <string name="riwayat_maintenance1">Riwayat Maintenance</string>
    <string name="pelaksanaan_maintenance">Pelaksanaan Maintenance</string>
    <string name="check_modul">Check Modul</string>
    <string name="check_mesin">Check Mesin</string>
    <string name="refresh_data">Refresh Data</string>
    <string name="update_terakhir">Update terakhir :</string>
    <string name="input_pdf">Input PDF</string>
    <string name="selesaikan_maintenance">Selesaikan Maintenance</string>
    <string name="breakdown_mesin">Breakdown Mesin</string>
</resources>