<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ayosemangat"
    tools:context=".Maintenance.RiwayatMesinActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:text="@string/riwayat_maintenance"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txt_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/line_mesin_proses"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/txt_modul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modul"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:text="@string/waktu_error"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:text=":" />
            <TextView
                android:id="@+id/waktu_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:text="@string/waktu_error1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13sp"
                android:text="@string/waktu_mulai_mnt"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:text=":" />
            <TextView
                android:id="@+id/waktu_mulai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:text="@string/waktu_mulai_mnt1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:text="@string/waktu_selesai_mnt"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:text=":" />
            <TextView
                android:id="@+id/waktu_selesai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:text="@string/waktu_selesai_mnt1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:text="@string/lama_penyelesaian"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:text=":" />
            <TextView
                android:id="@+id/waktu_lama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:text="@string/waktu_selesai_mnt2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/pic"/>
            <TextView
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text=":" />
            <TextView
                android:id="@+id/pic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/nama_pic" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:text="@string/sppm_wh"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:text=":" />
            <TextView
                android:id="@+id/sppmwh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:text="@string/sppm_wh1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:text="@string/bagian_mesin"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:text=":" />
            <TextView
                android:id="@+id/bagian_mesin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:text="@string/bagian_mesin1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:text="@string/sparepart"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:text=":" />
            <TextView
                android:id="@+id/sparepart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:text="@string/sparepart1" />
        </LinearLayout>


        <TextView
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/masalah_mekanikal1" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:text="@string/permasalahan" />
        <TextView
            android:id="@+id/mekanikal_masalah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:textColor="@color/colorDark"
            android:textSize="14sp"
            android:text="@string/masalah"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:text="@string/penyebab" />
        <TextView
            android:id="@+id/mekanikal_penyebab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:textColor="@color/colorDark"
            android:textSize="14sp"
            android:text="@string/penyebab1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:text="@string/penyelesaian" />
        <TextView
            android:id="@+id/mekanikal_penyelesaian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:textColor="@color/colorDark"
            android:textSize="14sp"
            android:text="@string/penyelesaian1" />

        <TextView
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/masalah_teknikal" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:text="@string/alarm" />
        <TextView
            android:id="@+id/teknikal_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:textColor="@color/colorDark"
            android:textSize="14sp"
            android:text="@string/displayalarm_nama_alarm"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:text="@string/definisi" />
        <TextView
            android:id="@+id/teknikal_definisi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14sp"
            android:textColor="@color/colorDark"
            android:textSize="14sp"
            android:text="@string/definisi1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:text="@string/penyebab2" />
        <TextView
            android:id="@+id/teknikal_penyebab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:textColor="@color/colorDark"
            android:textSize="14sp"
            android:text="@string/penyebab4"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="7dp"
            android:orientation="horizontal" />

        <TextView
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="" />

    </LinearLayout>
</ScrollView>